--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.8",
     "nodemon": "^2.0.20",
+    "pg": "^8.10.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.29.0",
+    "sequelize-cli": "^6.6.0",
     "socket.io": "^4.5.2"
   }
 }
